// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup should render correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <Memo(Pressable)
      onPress={[MockFunction]}
      style={
        {
          "backgroundColor": "#2B1911",
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
  </View>
</Modal>
`;

exports[`Popup should render the popup component if it exists 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
  >
    <Memo(Pressable)
      onPress={[MockFunction]}
      style={
        {
          "backgroundColor": "#2B1911",
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <Text>
      Popup Component
    </Text>
  </View>
</Modal>
`;
